--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^0.6.1
+  http: ^0.13.4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +50,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
